[package]
name = "agora-protocol"
version = "0.1.0"
description = "AGORA Protocol - Universal Basic Income on Solana"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agora-protocol/agora-protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "agora_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.32", features = ["full"] }
